--- a/css/style.css
+++ b/css/style.css
@@ -15,14 +15,43 @@ body {
 }
 
 #navbar {
-    background-color: gray;
+    display: flex;
+    background-color: black;
     min-width: 100vw;
     height: 70px;
-    
+    justify-content: end;
 }
 
-@media (min-width: 481px) and (max-width: 768px) {
+#nav-items {
+    display: flex;
+    text-decoration: none;
+    padding-top: 23px;
+    list-style: none;
+    gap: 30px;
+    width: 30vw;
+}
+
+#nav-items a {
+    text-decoration: none;
+    color: white;
+}
+
+.item-description {
+    display: flex;
+}
+
+
+
+@media (min-width: 375px) and (max-width: 768px) {
     #navbar {
         background-color: red;
+    }
+    
+    #nav-items {
+        padding-right: 100px;
+        text-align: center;
+        justify-content: center;
+        gap: 50px;
+        width: 100vw;
     }
 }
