--- a/css/style.css
+++ b/css/style.css
@@ -42,37 +42,9 @@ body {
 
 
 
-@media (min-width: 320px) and (max-width: 380px) {
+@media (min-width: 375px) and (max-width: 768px) {
     #navbar {
-        background-color: blue;
-    }
-    
-    #nav-items {
-        padding-right: 100px;
-        text-align: center;
-        justify-content: center;
-        gap: 50px;
-        width: 100vw;
-    }
-}
-
-@media (min-width: 481px) and (max-width: 768px) {
-    #navbar {
-        background-color: orange;
-    }
-    
-    #nav-items {
-        padding-right: 100px;
-        text-align: center;
-        justify-content: center;
-        gap: 50px;
-        width: 100vw;
-    }
-}
-
-@media (min-width: 769px) and (max-width: 1024px) {
-    #navbar {
-        background-color: purple;
+        background-color: red;
     }
     
     #nav-items {
